# termbench-pro

./: .clang-format  CMakeLists.txt  README.md  autogen.sh  vcpkg.json
.github/: labeler.yml
.github/workflows/: build.yml
.github/workflows/disabled/: codeql-analysis.yml
cmake/: PedanticCompiler.cmake  ThirdParties.cmake
cmake/presets/: common.json
libtermbench/: CMakeLists.txt  tbp.h  termbench-config.cmake.in  termbench.cpp  termbench.h
scripts/: Xvfb-bench-run.sh  install-deps.sh  plot_results.jl  xvfb-deps.sh
tb/: CMakeLists.txt  main.cpp
termbenchpro/: CMakeLists.txt  main.cpp
